Add plot (before refactor)